Adjust spacing and add 'offset' label to color stops table

--- a/src/styles.css
+++ b/src/styles.css
@@ -1120,8 +1120,16 @@ input.slider:not(:checked) + .slider .slider-on {
 	margin-top: 1rem;
 }
 
+.mt-5px {
+	margin-top: 5px;
+}
+
 .grad-color-row td {
 	padding: 5px 10px 5px 0
+}
+
+.grad-color-row td:first-child {
+	padding: 5px 5px 5px 0;
 }
 
 .grad-color-row td:last-child {
